# cppcon-2017-runtime-polymorphism

./: CMakeLists.txt  README.md  custom.css  index.html
code/: functions.cpp  heap_storage.cpp  inheritance-manual.cpp  joined_vtable.cpp  joined_vtable.dyno.cpp  local-split-ptr.cpp  local_storage.cpp  local_storage.dyno.cpp  local_vtable.cpp  local_vtable.dyno.cpp  naive-split-ptr.cpp  naive-type-erasure-split-ptr.cpp  naive-type-erasure.cpp  naive.cpp  non_owning_storage.cpp  non_owning_storage.dyno.cpp  remote_storage.cpp  remote_storage.dyno.cpp  sbo-split-ptr-generalized.cpp  sbo-split-ptr.cpp  sbo_storage-generalized.cpp  sbo_storage.cpp  sbo_storage.dyno.cpp  sean.cpp  shared_remote_storage.cpp  vtable.dyno.hpp  vtable.hpp
code/dependencies/: CMakeLists.txt
